# MobiScale

./: .gitignore  Cargo.toml  Config.toml
appattest-rs/: Cargo.toml  build.rs
appattest-rs/examples/: assertion.rs  attestation.rs
appattest-rs/src/: assertion.rs  attestation.rs  authenticator.rs  lib.rs
apps/: Cargo.toml  README.md  build.rs
apps/src/: lib.rs
ecdsa/: Nargo.toml
ecdsa/src/: main.nr
ios/: .gitignore
ios/MoproApp/: ContentView.swift  Randomness.swift
ios/MoproApp.xcodeproj/: project.pbxproj
ios/MoproApp/Models/: IdentityMatchModels.swift  ProofModels.swift  RandomnessModels.swift  SecureEncalveModels.swift
ios/MoproApp/Services/: FaceEmbeddingService.swift  ProverService.swift  RandomnessService.swift  SecureEnclaveService.swift  VerifiabilityService.swift
ios/MoproApp/Support/: HexExtensions.swift
ios/MoproApp/UI/: AssertionView.swift  AttestationView.swift  ContentView.swift  DoneView.swift  IdentityMatchSuccessView.swift  IdentityMatchView.swift  IntroductionView.swift  PhotoInferenceView.swift  PhotoSelectionView.swift  RandomnessView.swift  SharedComponents.swift
ios/MoproApp/ViewModel/: AppFlowViewModel.swift  AssertionViewModel.swift  AttestationViewModel.swift  IdentityMatchViewModel.swift  ProofViewModel.swift  RandomnessViewModel.swift
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
mlconvert/: converter.py  requirements.txt
