[workspace]
resolver = "2"
members = ["apps", "methods", "appattest-rs"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy = { version = "0.15", features = ["full"] }
alloy-primitives = { version = "1.0", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.0" }
bincode = { version = "1.3" }
methods = { path = "./methods" }
risc0-build = { version = "2.0.1", features = ["docker"] }
# using git references here to ensure this matches the submodules in ./lib
risc0-zkvm = { version = "2.0.2" }

[profile.release]
debug = 1
lto = true
