[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "mopro_bindings"
crate-type = ["lib", "cdylib", "staticlib"]


[dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", no-default-features = true, features = ["noir"] }
uniffi = { version = "0.29" }
env_logger = { version = "0.10" }
methods = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["prove", "metal", "unstable"] }
bincode = "1.3"
thiserror = "2.0.12"
