[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "attestation"
path = "src/bin/attestation.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.0.2", default-features = false, features = ['std'] }
appattest-rs = { path = "../../appattest-rs" }

[profile.release]
lto = "thin"
